@@ -1,4 +1,5 @@
 import QtQuick 1.1
+import "../units/units.js" as Units
 
 Item {
     // Stores background image. Preferably in PNG, although all
@@ -40,5 +41,31 @@ Item {
 
         hipsometricMap.z = z2;
         background.z = z1;
+    }
+
+    function setUnits(newList) {
+        Units.list = newList;
+
+        // Experimental event searching.
+        // Would be better to optimise this.
+        // For example, add coarse filter in Unit.qml
+        // that would send a signal only once 5-10 units,
+        // and would combine X and Y signals into one.
+        for (var i = 0; i < Units.list.length; i++) {
+            var unit = Units.list[i];
+            unit.positionChanged.connect(checkForHits);
+//            console.log("Unit number " + i + " is set in Map element.");
+        }
+    }
+
+    function checkForHits(x, y, index) {
+        var child = childAt(x, y);
+        if ((child == null) || (child == background) || (child == hipsometricMap))
+            return;
+
+        // WARNING! This checks x and y only. No check for width/height/rotation. Yet.
+
+        console.log("Hit! Who: " + child);
+        child.removeTop();
     }
 }
