@@ -4,11 +4,21 @@ Item {
     property bool topVisible: true
 
     function removeTop() {
-        if (top.visible) {
+        if (topVisible == true) {
             topVisible = false;
         }
     }
     function toggleTop() {
         topVisible = !topVisible;
     }
+
+    objectName: "props/Prop"
+
+//    MouseArea {
+//        anchors.fill: parent
+
+//        onClicked: {
+//            toggleTop();
+//        }
+//    }
 }
