@@ -138,6 +138,8 @@ Item {
                     units.item.children[i].unitIndex = i;
                     togglePause.connect(units.item.children[i].togglePause);
                 }
+
+                map.item.setUnits(units.item.children);
             }
         }
 
