@@ -1,0 +1,2 @@
+var list = new Array(); // Intended to hold list of units. Is likely to be moved into C++
+                        // later on.
